--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,7 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 .App-header {
   background-color: #282c34;
@@ -24,15 +20,30 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.footer{
+ 
+  padding: 50px;
+max-width: 100%;
+background-color: black;
+color: white;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-size: medium;
+text-align: center;
+display: flex;
+flex-direction: column;
+justify-items: center;
+justify-content: center;
+align-content: center;
+align-items: center;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.footer>a{
+  height:30px;
+  width: 120px;
+  color: red;
+  background-color: white;
+  border: 3px solid red;
+  border-radius: 20px;
+  padding-top: 8px;
+  text-decoration: none;
 }
